@@ -34,7 +34,6 @@
 					}
 				/*]]>*/
 				</script>
-				<script type="text/javascript" src="contrib/prototype/prototype.js"></script>
 				<script type="text/javascript" src="sysext/t3skin/resources/login.js"></script>
 			</div>
 		</div>
@@ -130,7 +129,7 @@
 		###VALUE_INTERFACE###
 	</div>
 	<!-- ###INTERFACE_SELECTOR### end -->
-	<input type="submit" name="commandLI" id="t3-login-submit" value="###VALUE_SUBMIT###" class="t3-login-submit" tabindex="4" />  
+	<input type="submit" name="commandLI" id="t3-login-submit" value="###VALUE_SUBMIT###" class="t3-login-submit" tabindex="4" />
 	<div class="t3-login-form-footer">
 		<div id="t3-login-form-footer-default">
 			<a id="t3-login-switchToOpenId" class="switchToOpenId">###LABEL_SWITCHOPENID###</a>
